Modified implementation of resize detection implemented. Uglify added to the project.

--- a/demo/index.jade
+++ b/demo/index.jade
@@ -19,6 +19,5 @@ html
             div.h2.blocks 12
             div.h1.blocks 13
             div.h1.blocks 14
-        script(type="text/javascript" src="bower_components/javascript-detect-element-resize/detect-element-resize.js")
-        script(type="text/javascript" src="Perffect.js")
+        script(type="text/javascript" src="../src/Perffect.js")
         script(type="text/javascript" src="index.js")
