--- a/demo/index.jade
+++ b/demo/index.jade
@@ -5,7 +5,7 @@ html
         link(rel="stylesheet" href="index.css")
     body
         div(id="container")
-            div(id="first").h1.blocks 1
+            div(id="first").blocks
             div.h2.blocks 2
             div.h1.blocks 3
             div.h2.blocks 4
@@ -19,5 +19,6 @@ html
             div.h2.blocks 12
             div.h1.blocks 13
             div.h1.blocks 14
+        script(type="text/javascript" src="../bower_components/Resizer/dist/Resizer.min.js")
         script(type="text/javascript" src="../src/Perffect.js")
         script(type="text/javascript" src="index.js")
