--- a/demo/index.jade
+++ b/demo/index.jade
@@ -19,6 +19,6 @@ html
             div.h2.blocks 12
             div.h1.blocks 13
             div.h1.blocks 14
-        script(type="text/javascript" src="../bower_components/Resizer/dist/Resizer.min.js")
+        script(type="text/javascript" src="../bower_components/Resizer/src/Resizer.js")
         script(type="text/javascript" src="../src/Perffect.js")
         script(type="text/javascript" src="index.js")
